# pgn-to-sqlite

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  run_tests.yml
pgn_to_sqlite/: __init__.py  cli.py  helpers.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_pgn_file.pgn
tests/game_files/: test_pgn_file_lichess.pgn
