[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pgn_to_sqlite"
authors = [{name = "Ricky White", email = "ricky@rickywhite.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["description"]
dependencies  = [
    "berserk==0.13.2",
    "click==8.1.7",
    "requests==2.32.3"
]
requires-python=">=3.8"
version="2.1.12"

[project.urls]
Home = "https://github.com/EndlessTrax/pgn-to-sqlite"
Documentation = "https://github.com/EndlessTrax/pgn-to-sqlite/blob/master/README.md"
Issues = "https://github.com/EndlessTrax/pgn-to-sqlite/issues"

[project.scripts]
pgn-to-sqlite = "pgn_to_sqlite.cli:cli"