[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgn_to_sqlite"
version="2.2.0"
requires-python = ">=3.9"
authors = [{name = "Ricky White", email = "ricky@rickywhite.net"}]
description = "Pull your Chess games from chess.com and lichess.org into a sqlite3 database."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "berserk==0.13.2",
    "click==8.1.7",
    "requests==2.32.3"
]

[project.urls]
Home = "https://github.com/EndlessTrax/pgn-to-sqlite"
Documentation = "https://github.com/EndlessTrax/pgn-to-sqlite/blob/master/README.md"
Issues = "https://github.com/EndlessTrax/pgn-to-sqlite/issues"

[project.scripts]
pgn-to-sqlite = "pgn_to_sqlite.cli:cli"

[tool.uv]
dev-dependencies = [
    "exceptiongroup>=1.2.2",
    "flit>=3.10.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.2",
]